--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,16 +2,26 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
-
 android {
-    compileSdk 32
+    compileSdk 33
+    aaptOptions.cruncherEnabled = false
+    sourceSets {
+        main {
+            jniLibs.srcDir 'libs'
+        }
+    }
+
 
     defaultConfig {
         applicationId "com.example.weather"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
+        ndk {
+            // 设置支持的SO库架构（开发者可以根据需要，选择一个或多个平台的so）
+            abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "x86","x86_64"
+        }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -38,6 +48,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.13.2'
+    implementation'androidx.recyclerview:recyclerview:1.2.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    implementation'com.github.bumptech.glide:glide:4.11.0'
+    implementation'com.google.code.gson:gson:2.8.9'
+    implementation 'com.baidu.lbsyun:BaiduMapSDK_Location:9.1.8'
+    implementation 'com.baidu.lbsyun:BaiduMapSDK_Util:7.5.4'
+
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
+
